# src/main/java/com/eneik/generated/dto/OtpInitiateRequest.java
@@ -1,0 +1,20 @@
+package com.eneik.generated.dto;
+
+public class OtpInitiateRequest {
+    private String phoneNumber;
+
+    public OtpInitiateRequest() {
+    }
+
+    public OtpInitiateRequest(String phoneNumber) {
+        this.phoneNumber = phoneNumber;
+    }
+
+    public String getPhoneNumber() {
+        return phoneNumber;
+    }
+
+    public void setPhoneNumber(String phoneNumber) {
+        this.phoneNumber = phoneNumber;
+    }
+}
