# src/main/java/com/eneik/generated/dto/ProxyBindDTO.java
@@ -1,0 +1,20 @@
+package com.eneik.generated.dto;
+
+public class ProxyBindDTO {
+    private Long proxyId;
+
+    public ProxyBindDTO() {
+    }
+
+    public ProxyBindDTO(Long proxyId) {
+        this.proxyId = proxyId;
+    }
+
+    public Long getProxyId() {
+        return proxyId;
+    }
+
+    public void setProxyId(Long proxyId) {
+        this.proxyId = proxyId;
+    }
+}
