# src/main/java/com/eneik/generated/dto/TGAccountUpdateDTO.java
@@ -1,0 +1,20 @@
+package com.eneik.generated.dto;
+
+public class TGAccountUpdateDTO {
+    private Integer dailyLimit;
+
+    public TGAccountUpdateDTO() {
+    }
+
+    public TGAccountUpdateDTO(Integer dailyLimit) {
+        this.dailyLimit = dailyLimit;
+    }
+
+    public Integer getDailyLimit() {
+        return dailyLimit;
+    }
+
+    public void setDailyLimit(Integer dailyLimit) {
+        this.dailyLimit = dailyLimit;
+    }
+}
